--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <servlet>
-        <servlet-name>PruebaServlet</servlet-name>
-        <servlet-class>com.pabloQuiroga.controllers.PruebaServlet</servlet-class>
+        <servlet-name>Home</servlet-name>
+        <servlet-class>com.pabloQuiroga.controllers.Home</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>PruebaServlet</servlet-name>
-        <url-pattern>/prueba</url-pattern>
+        <servlet-name>Home</servlet-name>
+        <url-pattern>/Home</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
@@ -14,6 +14,8 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>prueba</welcome-file>
+        <welcome-file>
+            Home
+        </welcome-file>
     </welcome-file-list>
 </web-app>
